--- a/styleMenu.css
+++ b/styleMenu.css
@@ -7,6 +7,135 @@
     list-style: none;
 }
 
+div.navBar{
+    position: fixed;
+    top: 0;
+    height: 60px;
+    width: 100%;
+}
+
+nav{
+    display: flex;
+    margin-top: 0;
+    justify-content: space-between;
+    background: #9bb399;
+    padding: 10px 10%;
+    max-height: 60px;
+    max-width: 100%;
+    align-items: center;
+}
+
+.logo{
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
+.logo h2{
+    font-weight: 600;
+    padding-left: 30px;
+    color: black;
+    background-color: #9bb399;
+}
+
+
+nav a{
+    font-weight: 500;
+    padding-right: 30px;
+    text-decoration: none;
+    background-color: #9bb399;
+    color:black;
+}
+
+nav a:hover{
+    color:#ffff;
+}
+
+.perfil{
+    width: 90px;
+    padding-left: 30px;
+    background-color: #9bb399;
+    cursor: pointer;
+}
+
+.sub-menu{
+    position: absolute;
+    right: 10%;
+    width: 250px;
+    top: 100%;
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.5s;
+}
+
+.sub-menu.open-menu{
+    max-height: 300px;
+    background-color: rgba(0,0,0,.7)
+}
+
+.items{
+    background-color: #ffff;
+    padding: 20px;
+    margin: 10%;
+}
+
+.user-info{
+    display: flex;
+    align-items: center;
+    background-color: white;
+}
+
+.user-info p{
+    background-color: white;
+}
+
+.user-info img{
+    width: 30px;
+    margin-right: 15px;
+    background-color: #ffff;
+}
+
+.sub-menu-link{
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #525252;
+    margin: 10px 0;
+    background-color: #ffff;
+
+}
+
+.sub-menu-link p{
+    background-color: #ffff;
+    margin-left: 10px;
+    font-size: small;
+}
+
+.sub-menu-link span{
+    background-color: #ffff;
+    margin-left: 40px;
+    font-size: 15px;
+    transition: transform 0.5s;
+    color: black;
+}
+
+.sub-menu-link:hover span{
+    transform: translateX(5px);
+}
+
+.sub-menu-link:hover p{
+    font-weight: 600;
+    color: black;
+}
+
+.sub-menu-link img{
+    width: 40px;
+    border-radius: 50%;
+    background: #e5e5e5;
+    padding: 5px;
+    margin-right: 5%;
+}
+
 body{
     width: 100%;
     height: 100vh;
@@ -20,11 +149,12 @@ div.container{
     width: 100%;
     display: flex;
     max-width: 1300px;
+    margin-top: 25px;
 }
 
 div.card{
-    width: 100%;
-    height: 450px;
+    max-width: 100%;
+    max-height: 450px;
     margin: 15px;
     background: #e7eee6;
     box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
