--- a/materiaPrima.css
+++ b/materiaPrima.css
@@ -163,9 +163,13 @@ nav a:hover{
     font-family: sans-serif;
 }
 
+form{
+    background-color: #ffff;
+}
+
 .container{
     max-width: 550px;
-    height: 400px;
+    height: 360px;
     width: 100%;
     background-color: #ffff;
     padding: 25px 30px;
@@ -211,57 +215,62 @@ form .detalle-cliente .input-box{
     font-size: 15px;
 }
 
-input[type="radio"]{
-    display: none;
+input[type="date"]{
+    color:#929090;
 }
 
-.tipoC{
-    display: inline-block;
+.input-box{
     background-color: #ffff;
 }
 
-label{
-    display: flex;
-    align-items: center;
+.input-box .detalle{
+    display: block;
+    margin-bottom: 5px;
     background-color: #ffff;
-    gap: 10px;
     font-size: 15px;
-    color: #525252;
-    margin-top: 5px;
-    margin-right: 20px;
-    cursor: pointer;
 }
 
-.radio-button{
-    width: 15px;
-    height: 15px;
-    background-color: #ccc;
-    display: inline-block;
-    border-radius: 50%;
-    box-shadow: 0, 0, 5px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
+.description-box{
     position: relative;
-}
-
-.radio-button::after{
-    content: '';
-    position: absolute;
-    height: 10px;
-    width: 10px;
-    background-color: #525252;
-    border-radius: 50%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-55%, -45%);
-    opacity: 0;
-}
-
-input:checked + label .radio-button::after{
-    opacity: 1;
+    width: 100%;
+    background-color: #ffff;
 }
 
 input[type="date"]{
     color:#929090;
+}
+
+textarea{
+    width: 500px;
+    border: 1px solid #ccc;
+    outline: 0;
+    color:#929090;
+    background-color: #ffffff;
+    font-size: 12px;
+    padding-left: 10px;
+    padding-top: 5px;
+    border-radius: 5px;
+}
+
+form .button{
+    margin: 30px 0;
+    background-color: #ffff;
+    align-items: center;
+    height: 40px;
+}
+
+form .button input{
+    height: 100%;
+    width: 500px;
+    cursor: pointer;
+    border-color: #ccc;
+    border-radius: 5px;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+form .button input:hover{
+    background-color: #759173;
 }
 
 form .button{
